# aigintel

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
aigintel/: early_stopping.py  imgutils.py  inference.py  losses.py  train.py  utils.py
aigintel/models/: basemodel.py  example_model.py  model.py
scripts/: install.bat  install.sh
